k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: credit-risk-api
  labels:
    app: credit-risk-api
spec:
  type: ClusterIP
  selector:
    app: credit-risk-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
